# RIFT

./: .cmake_preset  CMakeLists.txt  CMakePresets.json  compile_commands.json  vcpkg.json
cmake/: rft_stage_dist.cmake
header/engine/: rft_engine.h  rft_engine_configs.h
header/memory/: rft_arena.h  rft_arena_atomic.h
header/render/: rft_atmosphere.h  rft_buffer.h  rft_camera.h  rft_vertex_array.h
header/render/shader/: rft_shader.h  rft_shader_stage.h
header/render/texture/: rft_texture.h  rft_texture_array.h
header/ui/: rft_debug_overlay.h
header/utils/: rft_assert.h  rft_file.h  rft_gen_utils.h  rft_hints.h  rft_math_utils.h  rft_noise.h  rft_platform_stdio.h  rft_platform_threads.h  rft_rng.h  rft_state_machine.h  rft_thread_pool.h
header/window/: rft_window.h
header/window/input/: rft_input.h  rft_input_context.h  rft_input_map.h  rft_player_action_table.h  rft_player_actions.h
header/world/: rft_chunk.h  rft_streamer.h  rft_svo.h  rft_terrain.h  rft_voxel_face.h
res/shader/: chunk.frag  chunk.vert  debug_text.frag  debug_text.vert  post.frag  post.vert  sky.frag
res/textures/blocks/: blocks_array.json
src/: main.c
src/engine/: rft_engine.c  rft_engine_configs.c
src/memory/: rft_arena.c  rft_arena_atomic.c
src/render/: rft_atmosphere.c  rft_buffer.c  rft_camera.c  rft_vertex_array.c
src/render/shader/: rft_shader.c  rft_shader_stage.c
src/render/texture/: rft_texture.c  rft_texture_array.c
src/ui/: rft_debug_overlay.c  rft_debug_overlay_font.c  rft_debug_overlay_internal.h  rft_debug_overlay_stats.c
src/utils/: rft_assert.c  rft_file.c  rft_gen_utils.c  rft_math_utils.c  rft_noise.c  rft_rng.c  rft_state_machine.c  rft_thread_pool.c
src/window/: rft_window.c
src/window/input/: rft_input.c  rft_input_context.c  rft_input_map.c  rft_player_actions.c
src/world/: rft_chunk.c  rft_streamer.c  rft_svo.c  rft_terrain.c  rft_voxel_face.c
src/world/streamer/: rft_streamer_generation.c  rft_streamer_internal.h  rft_streamer_jobs.c  rft_streamer_lookup.c  rft_streamer_memory.c  rft_streamer_render.c
src/world/svo/: rft_svo_build.c  rft_svo_internal.h  rft_svo_mesh.c  rft_svo_query.c
tools/suppressions/: lsan.supp
